Content area refactor

--- a/index.html
+++ b/index.html
@@ -24,66 +24,42 @@
         <!-- Add your site or application content here -->
         <section class="main">
             <div class="container">
-
                 <div id="carousel" class="flexslider">
                     <ul class="slides image-carousel">
                         <li class="col-3">
                             <span>
                                 <img src="img/img-1.jpg" alt=""/>
-                                <a href="#first">Apple</a>
+                                <a href="#" data-quote="Lets go invent tomorrow instead of worrying about what happened yesterday" data-author="Steve Jobs">Apple</a>
                             </span>
                         </li>
                         <li class="col-3">
                             <span>
                                 <img src="img/img-2.jpg" alt=""/>
-                                <a href="#first">Menu 2</a>
+                                <a href="#" data-quote="Item 2" data-author="Steve Jobs">Item 2</a>
                             </span>
                         </li>
                         <li class="col-3">
                             <span>
                                 <img src="img/img-3.jpg" alt=""/>
-                                <a href="#first">Menu 3</a>
+                                <a href="#" data-quote="Item 3" data-author="Steve Jobs">Item 3</a>
                             </span>
                         </li>
                         <li class="col-3">
                             <span>
                                 <img src="img/img-4.jpg" alt=""/>
-                                <a href="#first">Menu 4</a>
-                            </span>
-                        </li>
-                        
-                    </ul>
-                </div>
-            </div>
-            <div class="container container-large">
-                <div id="slider" class="flexslider">
-                    <ul class="slides image-list">
-                        <li>
-                            <span>
-                                <img src="img/img-1.jpg" alt=""/>
-                                <blockquote><span class="blockquote-wrap">"Lets go invent tomorrow instead of worrying about what happened yesterday"<span>-Steve jobs</span></span></blockquote>
-                            </span>
-                        </li>
-                        <li>
-                            <span>
-                                <img src="img/img-2.jpg" alt=""/>
-                                <blockquote><span class="blockquote-wrap">"Blockquote 2"<span>-Steve jobs</span></span></blockquote>
-                            </span>
-                        </li>
-                        <li>
-                            <span>
-                                <img src="img/img-3.jpg" alt=""/>
-                                <blockquote><span class="blockquote-wrap">"Blockquote 3"<span>-Steve jobs</span></span></blockquote>
-                            </span>
-                        </li>
-                        <li>
-                            <span>
-                                <img src="img/img-4.jpg" alt=""/>
-                                <blockquote><span class="blockquote-wrap">"Blockquote 4"<span>-Steve jobs</span></span></blockquote>
+                                <a href="#" data-quote="Item 4" data-author="Steve Jobs">Item 4</a>
                             </span>
                         </li>
                     </ul>
                 </div>
+
+                <div id="content-area">
+                    <blockquote class="blockquote-wrap">
+                        <span class="blockquote"></span>
+                        <span class="blockquote-author"></span>
+                    </blockquote>
+                </div>
+
             </div>
         </section>
 
