--- a/index.html
+++ b/index.html
@@ -22,33 +22,37 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <section class="main">
+        <main class="main">
             <div class="container">
                 <div id="carousel" class="flexslider">
                     <ul class="slides image-carousel">
                         <li class="col-3">
-                            <span>
+                            <figure>
                                 <img src="img/img-1.jpg" alt=""/>
-                                <a href="#" data-quote="Lets go invent tomorrow instead of worrying about what happened yesterday" data-author="Steve Jobs">Apple</a>
-                            </span>
+                                <figcaption 
+                                    data-quote="Lets go invent tomorrow instead of worrying about what happened yesterday" 
+                                    data-author="Steve Jobs">
+                                    Apple
+                                </figcaption>
+                            </figure>
                         </li>
                         <li class="col-3">
-                            <span>
+                            <figure>
                                 <img src="img/img-2.jpg" alt=""/>
-                                <a href="#" data-quote="Item 2" data-author="Steve Jobs">Item 2</a>
-                            </span>
+                                <figcaption data-quote="Item 2" data-author="Steve Jobs">Item 2</figcaption>
+                            </figure>
                         </li>
                         <li class="col-3">
-                            <span>
+                            <figure>
                                 <img src="img/img-3.jpg" alt=""/>
-                                <a href="#" data-quote="Item 3" data-author="Steve Jobs">Item 3</a>
-                            </span>
+                                <figcaption data-quote="Item 3" data-author="Steve Jobs">Item 3</figcaption>
+                            </figure>
                         </li>
                         <li class="col-3">
-                            <span>
+                            <figure>
                                 <img src="img/img-4.jpg" alt=""/>
-                                <a href="#" data-quote="Item 4" data-author="Steve Jobs">Item 4</a>
-                            </span>
+                                <figcaption data-quote="Item 4" data-author="Steve Jobs">Item 4</figcaption>
+                            </figure>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +65,7 @@
                 </div>
 
             </div>
-        </section>
+        </main>
 
         <script src="js/vendor/jquery-1.12.0.min.js"></script>
         <script defer src="js/jquery.flexslider.js"></script>
